fix: align tooltip arrow with address

--- a/src/ui/component/AddressList/style.less
+++ b/src/ui/component/AddressList/style.less
@@ -104,13 +104,6 @@
 }
 
 .addressType__tooltip {
-  .ant-tooltip-content {
-    transform: translate(-3px, 5px);
-  }
-  .ant-tooltip-arrow {
-    right: 10px !important;
-    bottom: -13.071068px !important;
-  }
 }
 .address-wrap {
   margin-bottom: 8px;
